--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
+    "next": "14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "qrcode.react": "^3.1.0",
-    "framer-motion": "^10.16.4",
-    "uuid": "^9.0.1",
-    "tailwindcss": "^3.3.3",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "framer-motion": "^11.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
@@ -27,9 +24,10 @@
     "@types/uuid": "^9.0.6",
     "typescript": "^5.2.2",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.0",
-    "rimraf": "^5.0.5",
-    "glob": "^10.3.10"
+    "eslint-config-next": "14.2.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   },
   "overrides": {
     "rimraf": "^5.0.5",
