--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.0",
-    "react": "^18.2.0",
+    "framer-motion": "^11.0.0",
+    "next": "^14.2.0",
+    "qrcode.react": "^3.1.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "qrcode.react": "^3.1.0",
-    "framer-motion": "^11.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.8.7",
-    "@types/react": "^18.2.31",
+    "@types/node": "^20.17.30",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18.2.14",
     "@types/uuid": "^9.0.6",
-    "typescript": "^5.2.2",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.2.0",
-    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   },
   "overrides": {
     "rimraf": "^5.0.5",
