--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.0.0",
+    "jsqr": "^1.4.0",
     "next": "^14.2.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
