--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "node build-check.js",
+    "clean": "node clean-all.js"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
