--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "node build-check.js",
-    "clean": "node clean-all.js"
+    "type-check": "node build-check.js"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
